--- a/spring.html
+++ b/spring.html
@@ -211,6 +211,9 @@
   <table id="tableShift1">
     <thead>
       <tr>
+      <th colspan="13" style="background:#006400; color:white; font-size:22px;">SHIFT 1</th>
+    </tr>
+      <tr>
         <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
