--- a/spring.html
+++ b/spring.html
@@ -101,6 +101,20 @@
     width: 180px;
   }
 
+  .shift-label {
+  background: #006400;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 6px 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: fit-content;
+  margin-left: 10px;
+  margin-bottom: 2px;
+}
+
+
   .total-box table {
     width: 100%;
     border-collapse: collapse;
@@ -207,12 +221,9 @@
 <!-- === SHIFT 1 === -->
 <div class="container">
   <h2>SPRING PACKING TARGET : 60 Pcs/Jam</h2>
-  <h1>SHIFT 1</h1>
+  <div class="shift-label">SHIFT 1</div>
   <table id="tableShift1">
     <thead>
-      <tr>
-      <th colspan="13" style="background:#006400; color:white; font-size:22px;">SHIFT 1</th>
-    </tr>
       <tr>
         <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
         <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
@@ -227,7 +238,7 @@
 
 <!-- === SHIFT 2 === -->
 <div class="container">
-  <h1>SHIFT 2</h1>
+  <div class="shift-label">SHIFT 2</div>
   <table id="tableShift2">
     <thead>
       <tr>
