--- a/spring.html
+++ b/spring.html
@@ -104,11 +104,10 @@
   .shift-label {
   background: #006400;
   color: white;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   padding: 6px 10px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 10px;
   width: fit-content;
   margin-left: 10px;
   margin-bottom: 2px;
