--- a/spring.html
+++ b/spring.html
@@ -242,8 +242,8 @@
   <table id="tableShift2">
     <thead>
       <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        <th>LINE</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
+        <th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:30</th><th>07:30</th><th>AVG</th><th>TOTAL</th>
       </tr>
     </thead>
     <tbody id="bodyShift2">
@@ -259,14 +259,14 @@
   <div class="total-wrapper">
     <div class="total-box">
       <table id="tableTotalShift1">
-        <thead><tr><th>TOTAL SHIFT 1</th></tr></thead>
+        <thead><tr><th>OUTPUT SHIFT 1</th></tr></thead>
         <tbody id="bodyTotalShift1"><tr><td>0</td></tr></tbody>
       </table>
     </div>
 
     <div class="total-box">
       <table id="tableTotalShift2">
-        <thead><tr><th>TOTAL SHIFT 2</th></tr></thead>
+        <thead><tr><th>OUTPUT SHIFT 2</th></tr></thead>
         <tbody id="bodyTotalShift2"><tr><td>0</td></tr></tbody>
       </table>
     </div>
