--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
 
   .marquee {
-    background: #006400;
+    background: #083D36;
     color: white;
     padding: 10px 0;
     font-size: 40px;
@@ -53,7 +53,7 @@
   }
 
   th {
-    background: #006400;
+    background: #083D36;
     color: white;
   }
 
@@ -101,7 +101,7 @@
   }
 
   .total-box th {
-    background: #006400;
+    background: #083D36;
     color: white;
     font-size: 18px;
     padding: 10px;
@@ -183,7 +183,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #006400;
+    background: #083D36;
     color: white;
     padding: 20px 10px;
     border-top: 4px solid #004d00;
@@ -427,6 +427,7 @@ document.getElementById("shiftSelector").addEventListener("change", function() {
 </script>
 </body>
 </html>
+
 
 
 
