--- a/tes.html
+++ b/tes.html
@@ -5,11 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>📊 Monitoring Produksi Realtime</title>
 <style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden; /* Tidak bisa scroll */
+  }
+
   body {
     font-family: 'Segoe UI', Arial, sans-serif;
     background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-origin: top center;
+  }
+
+  #mainContent {
+    width: 100vw;
+    height: 100vh;
+    transform: scale(1);
+    transform-origin: top center;
+    transition: transform 0.2s ease;
   }
 
   .marquee {
@@ -32,7 +49,7 @@
 
   .container {
     width: 95%;
-    margin: 15px auto;
+    margin: 10px auto;
     background: white;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.1);
@@ -71,20 +88,20 @@
     border-bottom-right-radius: 10px;
   }
 
-  /* === BAGIAN TOTAL + JAM === */
+  /* === TOTAL BAR BARU === */
   .top-bar {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 20px 3%;
+    margin: 15px 3%;
     flex-wrap: wrap;
   }
 
   .total-wrapper {
     display: flex;
-    justify-content: flex-start;
-    gap: 20px;
-    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
   }
 
   .total-box {
@@ -93,11 +110,6 @@
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     overflow: hidden;
     width: 180px;
-  }
-
-  .total-box table {
-    width: 100%;
-    border-collapse: collapse;
   }
 
   .total-box th {
@@ -161,14 +173,8 @@
   }
 
   @keyframes fadeZoomIn {
-    0% {
-      opacity: 0;
-      transform: scale(0.8) rotate(-5deg);
-    }
-    100% {
-      opacity: 1;
-      transform: scale(1) rotate(0deg);
-    }
+    0% { opacity: 0; transform: scale(0.8) rotate(-5deg); }
+    100% { opacity: 1; transform: scale(1) rotate(0deg); }
   }
 
   @keyframes pulse {
@@ -177,7 +183,6 @@
     100% { transform: scale(1); }
   }
 
-  /* === FOOTER ZINUS === */
   .footer-zinus {
     display: flex;
     justify-content: center;
@@ -185,7 +190,7 @@
     flex-direction: column;
     background: #083D36;
     color: white;
-    padding: 20px 10px;
+    padding: 15px 10px;
     border-top: 4px solid #004d00;
     margin-top: 10px;
   }
@@ -193,141 +198,92 @@
   .footer-zinus p {
     margin: 5px 0 15px;
     font-size: 16px;
-    letter-spacing: 0.5px;
-  }
-
-  /* === RESPONSIVE === */
-  @media (max-width: 768px) {
-    .container {
-      width: 100%;
-      margin: 10px 0;
-      border-radius: 0;
-      box-shadow: none;
-    }
-
-    th, td {
-      font-size: 14px;
-      padding: 6px 4px;
-    }
-
-    .marquee { font-size: 16px; padding: 8px 0; }
-    h2 { font-size: 18px; }
-    #jam { font-size: 24px; }
-    #tanggal { font-size: 14px; }
-
-    .zinus-logo, .zinus-logo1 {
-      width: 45px;
-      height: 45px;
-    }
-
-    .logo-row {
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .footer-zinus p { font-size: 14px; }
   }
 </style>
 </head>
 <body>
+<div id="mainContent">
+  <div class="marquee">
+    <marquee behavior="scroll" direction="left" scrollamount="6">
+      HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
+    </marquee>
+  </div>
 
-<!-- === TEKS BERJALAN === -->
-<div class="marquee">
-  <marquee behavior="scroll" direction="left" scrollamount="6">
-    HOURLY MONITORING TOPPER PACKING DAN FOAM PACKING
-  </marquee>
-</div>
+  <div class="container">
+    <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
+    <table id="tableTopper">
+      <thead>
+        <tr>
+          <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+          <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        </tr>
+      </thead>
+      <tbody id="bodyTopper"><tr><td colspan="13">Loading data...</td></tr></tbody>
+    </table>
+    <div class="footer">Auto-refresh setiap 30 detik</div>
+  </div>
 
-<!-- === TABEL TOPPER === -->
-<div class="container">
-  <h2>TOPPER PACKING TARGET : 90 Pcs/Jam</h2>
-  <table id="tableTopper">
-    <thead>
-      <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
-      </tr>
-    </thead>
-    <tbody id="bodyTopper">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
-    </tbody>
-  </table>
-  <div class="footer">Auto-refresh setiap 30 detik</div>
-</div>
+  <div class="container">
+    <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
+    <table id="tableFoam">
+      <thead>
+        <tr>
+          <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
+          <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
+        </tr>
+      </thead>
+      <tbody id="bodyFoam"><tr><td colspan="13">Loading data...</td></tr></tbody>
+    </table>
+    <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
+  </div>
 
-<!-- === TABEL FOAM === -->
-<div class="container">
-  <h2>FOAM PACKING TARGET : 75 Pcs/Jam</h2>
-  <table id="tableFoam">
-    <thead>
-      <tr>
-        <th>LINE</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th>
-        <th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:30</th><th>AVG</th><th>TOTAL</th>
-      </tr>
-    </thead>
-    <tbody id="bodyFoam">
-      <tr><td class="loading" colspan="13">Loading data...</td></tr>
-    </tbody>
-  </table>
-  <div class="footer" id="status">Auto-refresh setiap 30 detik</div>
-</div>
-
-<!-- === BAGIAN TOTAL DAN JAM === -->
-<div class="top-bar">
-
-  <div class="total-wrapper">
-    <div class="total-box">
-      <table>
-        <thead><tr><th>SHIFT</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>
-              <select id="shiftSelector" 
-                style="font-size:28px;font-weight:bold;text-align:center;width:100%;border:none;background:none;appearance:none;outline:none;cursor:pointer;">
-                <option value="1" selected>1</option>
-                <option value="2">2</option>
-              </select>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <!-- === TOTAL SHIFT BARU === -->
+  <div class="top-bar">
+    <div class="total-wrapper">
+      <div style="display: flex; justify-content: center; width: 100%; gap: 80px;">
+        <h2 style="margin: 0; font-size: 28px; color: #083D36;">Output Shift 1</h2>
+        <h2 style="margin: 0; font-size: 28px; color: #083D36;">Output Shift 2</h2>
+      </div>
+      <div style="display: flex; justify-content: center; align-items: center; gap: 80px; width: 100%;">
+        <div style="display: flex; gap: 20px;">
+          <div class="total-box"><table><thead><tr><th>TOPPER</th></tr></thead><tbody id="bodyTotalTopper1"><tr><td>0</td></tr></tbody></table></div>
+          <div class="total-box"><table><thead><tr><th>FOAM</th></tr></thead><tbody id="bodyTotalFoam1"><tr><td>0</td></tr></tbody></table></div>
+        </div>
+        <div style="display: flex; gap: 20px;">
+          <div class="total-box"><table><thead><tr><th>TOPPER</th></tr></thead><tbody id="bodyTotalTopper2"><tr><td>0</td></tr></tbody></table></div>
+          <div class="total-box"><table><thead><tr><th>FOAM</th></tr></thead><tbody id="bodyTotalFoam2"><tr><td>0</td></tr></tbody></table></div>
+        </div>
+      </div>
     </div>
 
-    <div class="total-box">
-      <table id="tableTotalTopper">
-        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
-        <thead><tr><th>TOTAL TOPPER</th></tr></thead>
-        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
-        <tbody id="bodyTotalTopper"><tr><td>0</td></tr></tbody>
-      </table>
-    </div>
-
-    <div class="total-box">
-      <table id="tableTotalFoam">
-        <thead><tr><th>TOTAL FOAM</th></tr></thead>
-        <tbody id="bodyTotalFoam"><tr><td>0</td></tr></tbody>
-      </table>
+    <div class="total-wrapper1">
+      <div class="datetime">
+        <div id="tanggal"></div>
+        <div id="jam"></div>
+      </div>
+      <div class="logo-row">
+        <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
+        <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
+      </div>
     </div>
   </div>
 
-  <div class="total-wrapper1">
-    <div class="datetime">
-      <div id="tanggal"></div>
-      <div id="jam"></div>
-    </div>
-    <div class="logo-row">
-      <img src="logo-zinus1.gif" alt="Zinus Logo" class="zinus-logo1">
-      <img src="Hyundai_Logo.png" alt="Hyundai Logo" class="zinus-logo">
-    </div>
-  </div>
+  <footer class="footer-zinus">
+    <p>© Zinus Global Indonesia | Factory 2 Karawang</p>
+  </footer>
 </div>
-
-<!-- === FOOTER ZINUS === -->
-<footer class="footer-zinus">
-  <p>© Zinus Global Indonesia | Factory 2 Karawang</p>  
-</footer>
 
 <script>
+function scaleToFit() {
+  const content = document.getElementById("mainContent");
+  const scaleX = window.innerWidth / content.scrollWidth;
+  const scaleY = window.innerHeight / content.scrollHeight;
+  const scale = Math.min(scaleX, scaleY);
+  content.style.transform = `scale(${scale})`;
+}
+window.addEventListener('resize', scaleToFit);
+window.addEventListener('load', scaleToFit);
+
 const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTo_FFsfIx50Tgyzo2JZneIQtNBfIpP6eJ-KhzS1qenNIqy7rjmMaE1h1H5X2e_-7jdCbcwq6wdk5oL/pub?gid=773938712&single=true&output=csv";
 
 async function loadSheetData() {
@@ -335,102 +291,68 @@ async function loadSheetData() {
   try {
     status.textContent = "🔄 Memuat data...";
     const response = await fetch(SHEET_URL + "&t=" + Date.now(), { cache: "no-store" });
-    if (!response.ok) throw new Error("Gagal ambil data (" + response.status + ")");
     const text = await response.text();
     const rows = text.trim().split("\n").map(r => r.split(","));
 
     const topperBody = document.getElementById("bodyTopper");
     const foamBody = document.getElementById("bodyFoam");
-    const totalTopperBody = document.getElementById("bodyTotalTopper");
-    const totalFoamBody = document.getElementById("bodyTotalFoam");
-
-    topperBody.innerHTML = "";
-    foamBody.innerHTML = "";
-    totalTopperBody.innerHTML = "";
-    totalFoamBody.innerHTML = "";
+    topperBody.innerHTML = ""; foamBody.innerHTML = "";
 
     const topperRows = rows.slice(5, 8);
     const foamRows = rows.slice(11, 16);
 
-    topperRows.forEach(row => {
+    topperRows.forEach(r => {
       const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, index) => {
+      r.slice(0, 13).forEach((c, i) => {
         const td = document.createElement("td");
-        td.textContent = cell;
-        td.style.fontWeight = "bold";
-
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue)) {
-          if (cleanValue < 90 && cleanValue > 0) {
-            td.style.backgroundColor = "#ffcccc";
-            td.style.color = "#a80000";
-          }
-        }
+        td.textContent = c; td.style.fontWeight = "bold";
+        const v = parseFloat(c.replace(/[^0-9.]/g, "").trim());
+        if (i > 0 && !isNaN(v) && v < 90 && v > 0) { td.style.backgroundColor="#ffcccc"; td.style.color="#a80000"; }
         tr.appendChild(td);
       });
       topperBody.appendChild(tr);
     });
 
-    foamRows.forEach(row => {
+    foamRows.forEach(r => {
       const tr = document.createElement("tr");
-      row.slice(0, 13).forEach((cell, index) => {
+      r.slice(0, 13).forEach((c, i) => {
         const td = document.createElement("td");
-        td.textContent = cell;
-        td.style.fontWeight = "bold";
-
-        const cleanValue = parseFloat(cell.replace(/[^0-9.]/g, "").trim());
-        if (index > 0 && !isNaN(cleanValue)) {
-          if (cleanValue < 75 && cleanValue > 0) {
-            td.style.backgroundColor = "#ffcccc";
-            td.style.color = "#a80000";
-          }
-        }
+        td.textContent = c; td.style.fontWeight = "bold";
+        const v = parseFloat(c.replace(/[^0-9.]/g, "").trim());
+        if (i > 0 && !isNaN(v) && v < 75 && v > 0) { td.style.backgroundColor="#ffcccc"; td.style.color="#a80000"; }
         tr.appendChild(td);
       });
       foamBody.appendChild(tr);
     });
 
-    const totalRow = rows[18];
-    if (totalRow) {
-      const topperValue = totalRow[0] || "0";
-      const foamValue = totalRow[1] || "0";
-      totalTopperBody.innerHTML = `<tr><td>${topperValue}</td></tr>`;
-      totalFoamBody.innerHTML = `<tr><td>${foamValue}</td></tr>`;
+    // Total untuk Shift 1 dan Shift 2
+    const total1 = rows[18];
+    const total2 = rows[19];
+    if (total1) {
+      document.getElementById("bodyTotalTopper1").innerHTML = `<tr><td>${total1[0] || 0}</td></tr>`;
+      document.getElementById("bodyTotalFoam1").innerHTML = `<tr><td>${total1[1] || 0}</td></tr>`;
+    }
+    if (total2) {
+      document.getElementById("bodyTotalTopper2").innerHTML = `<tr><td>${total2[0] || 0}</td></tr>`;
+      document.getElementById("bodyTotalFoam2").innerHTML = `<tr><td>${total2[1] || 0}</td></tr>`;
     }
 
-    const now = new Date();
-    status.textContent = "✅ Diperbarui: " + now.toLocaleTimeString("id-ID");
-
-  } catch (err) {
-    console.error("Fetch error:", err);
+    status.textContent = "✅ Diperbarui: " + new Date().toLocaleTimeString("id-ID");
+  } catch (e) {
     status.textContent = "⚠️ Gagal memuat data";
   }
 }
 
 function updateClock() {
   const now = new Date();
-  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
-  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12: false });
+  document.getElementById("tanggal").textContent = now.toLocaleDateString("id-ID", { weekday:'long', year:'numeric', month:'long', day:'numeric' });
+  document.getElementById("jam").textContent = now.toLocaleTimeString("id-ID", { hour12:false });
 }
 
 setInterval(updateClock, 1000);
 updateClock();
 loadSheetData();
 setInterval(loadSheetData, 30000);
-
-document.getElementById("shiftSelector").addEventListener("change", function() {
-  const value = this.value;
-  if (value === "2") {
-    window.location.href = "shift2.html";
-  } else {
-    window.location.href = "index.html";
-  }
-});
 </script>
 </body>
 </html>
-
-
-
-
-
